Blender crashes on adding any object to collection duplicated with added scene #63101

Closed
opened 2019-03-29 16:51:35 +01:00 by Kate White · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: 99d4321fef
Worked: (optional)

Short description of error
Blender crashes on adding any object to collection duplicated with added scene

Exact steps for others to reproduce the error

  1. Add new scene by Link Object Data or Full Copy
  2. Select any collection (except Scene Collection)
  3. Add any object (for example Mesh/Plane)steps.jpg

Does not reproduce:

  • when new scene is added by Link Objects
  • when collection is created after adding new scene
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: `99d4321fef` Worked: (optional) **Short description of error** Blender crashes on adding any object to collection duplicated with added scene **Exact steps for others to reproduce the error** 1. Add new scene by Link Object Data or Full Copy 2. Select any collection (except Scene Collection) 3. Add any object (for example Mesh/Plane)![steps.jpg](https://archive.blender.org/developer/F6898996/steps.jpg) Does not reproduce: - when new scene is added by Link Objects - when collection is created after adding new scene
Author

Added subscriber: @eelh

Added subscriber: @eelh
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

It crashes. I can reproduce it on Ubuntu 18.04.2

It crashes. I can reproduce it on Ubuntu 18.04.2

Added subscriber: @rjg

Added subscriber: @rjg

The crash is caused by selbase being a nullptr in layer.c line 348. I'm not sure why it is though.

The crash is caused by selbase being a nullptr in layer.c line 348. I'm not sure why it is though.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-31 12:46:03 +02:00

Backtrace

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555558cf8567 in BKE_view_layer_base_select (selbase=0x0)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:348
348		if ((selbase->flag & BASE_SELECTABLE) != 0) {
(gdb) bt
#0  0x0000555558cf8567 in BKE_view_layer_base_select (selbase=0x0)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:348
#1  0x0000555558cf85b3 in BKE_view_layer_base_select_and_set_active (view_layer=0x7fffbc4c3088, selbase=0x0)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:356
#2  0x0000555558d93580 in BKE_object_add (bmain=0x7fffdbdadd08, UNUSED_scene=0x7fffb9fdb008, view_layer=0x7fffbc4c3088,
    type=1, name=0x55555ce683b3 "Cube") at /home/zed/prog/blender/source/blender/blenkernel/intern/object.c:923
#3  0x00005555582e3ea8 in ED_object_add_type (C=0x7fffdc858188, type=1, name=0x55555ce683b3 "Cube", loc=0x7fffffffd748,
    rot=0x7fffffffd754, enter_editmode=false, local_view_bits=0)
    at /home/zed/prog/blender/source/blender/editors/object/object_add.c:396
#4  0x0000555558227fcb in make_prim_init (C=0x7fffdc858188, idname=0x55555ce683b3 "Cube", loc=0x7fffffffd748,
    rot=0x7fffffffd754, local_view_bits=0, r_creation_data=0x7fffffffd760)
    at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_add.c:71
#5  0x0000555558228431 in add_primitive_cube_exec (C=0x7fffdc858188, op=0x7fffbce05888)
    at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_add.c:166
#6  0x0000555557dda488 in wm_operator_invoke (C=0x7fffdc858188, ot=0x7fffd7542648, event=0x7fffd655ac88,
    properties=0x7fffffffd990, reports=0x0, poll_only=false, use_last_properties=true)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1353
#7  0x0000555557ddab25 in wm_operator_call_internal (C=0x7fffdc858188, ot=0x7fffd7542648, properties=0x7fffffffd990,
    reports=0x0, context=1, poll_only=false, event=0x7fffd655ac88)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1550
#8  0x0000555557ddad48 in WM_operator_name_call_ptr (C=0x7fffdc858188, ot=0x7fffd7542648, context=1,
    properties=0x7fffffffd990) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1598
#9  0x000055555811fd85 in ui_apply_but_funcs_after (C=0x7fffdc858188)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:782
#10 0x00005555581383a2 in ui_popup_handler (C=0x7fffdc858188, event=0x7fffbcdfed88, userdata=0x7fffbcd46b88)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10134
#11 0x0000555557dd8110 in wm_handler_ui_call (C=0x7fffdc858188, handler=0x7fffbc9e09e8, event=0x7fffbcdfed88,
    always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:585
#12 0x0000555557ddd24a in wm_handlers_do_intern (C=0x7fffdc858188, event=0x7fffbcdfed88, handlers=0x7fffd7714e18)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2491
#13 0x0000555557dddc21 in wm_handlers_do (C=0x7fffdc858188, event=0x7fffbcdfed88, handlers=0x7fffd7714e18)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2720
#14 0x0000555557ddee55 in wm_event_do_handlers (C=0x7fffdc858188)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3071
- 15 0x0000555557dd36b4 in WM_main (C=0x7fffdc858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418
- 16 0x0000555557dcdd64 in main (argc=1, argv=0x7fffffffe0b8) at /home/zed/prog/blender/source/creator/creator.c:505
Backtrace ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555558cf8567 in BKE_view_layer_base_select (selbase=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:348 348 if ((selbase->flag & BASE_SELECTABLE) != 0) { (gdb) bt #0 0x0000555558cf8567 in BKE_view_layer_base_select (selbase=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:348 #1 0x0000555558cf85b3 in BKE_view_layer_base_select_and_set_active (view_layer=0x7fffbc4c3088, selbase=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/layer.c:356 #2 0x0000555558d93580 in BKE_object_add (bmain=0x7fffdbdadd08, UNUSED_scene=0x7fffb9fdb008, view_layer=0x7fffbc4c3088, type=1, name=0x55555ce683b3 "Cube") at /home/zed/prog/blender/source/blender/blenkernel/intern/object.c:923 #3 0x00005555582e3ea8 in ED_object_add_type (C=0x7fffdc858188, type=1, name=0x55555ce683b3 "Cube", loc=0x7fffffffd748, rot=0x7fffffffd754, enter_editmode=false, local_view_bits=0) at /home/zed/prog/blender/source/blender/editors/object/object_add.c:396 #4 0x0000555558227fcb in make_prim_init (C=0x7fffdc858188, idname=0x55555ce683b3 "Cube", loc=0x7fffffffd748, rot=0x7fffffffd754, local_view_bits=0, r_creation_data=0x7fffffffd760) at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_add.c:71 #5 0x0000555558228431 in add_primitive_cube_exec (C=0x7fffdc858188, op=0x7fffbce05888) at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_add.c:166 #6 0x0000555557dda488 in wm_operator_invoke (C=0x7fffdc858188, ot=0x7fffd7542648, event=0x7fffd655ac88, properties=0x7fffffffd990, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1353 #7 0x0000555557ddab25 in wm_operator_call_internal (C=0x7fffdc858188, ot=0x7fffd7542648, properties=0x7fffffffd990, reports=0x0, context=1, poll_only=false, event=0x7fffd655ac88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1550 #8 0x0000555557ddad48 in WM_operator_name_call_ptr (C=0x7fffdc858188, ot=0x7fffd7542648, context=1, properties=0x7fffffffd990) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1598 #9 0x000055555811fd85 in ui_apply_but_funcs_after (C=0x7fffdc858188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:782 #10 0x00005555581383a2 in ui_popup_handler (C=0x7fffdc858188, event=0x7fffbcdfed88, userdata=0x7fffbcd46b88) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10134 #11 0x0000555557dd8110 in wm_handler_ui_call (C=0x7fffdc858188, handler=0x7fffbc9e09e8, event=0x7fffbcdfed88, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:585 #12 0x0000555557ddd24a in wm_handlers_do_intern (C=0x7fffdc858188, event=0x7fffbcdfed88, handlers=0x7fffd7714e18) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2491 #13 0x0000555557dddc21 in wm_handlers_do (C=0x7fffdc858188, event=0x7fffbcdfed88, handlers=0x7fffd7714e18) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2720 #14 0x0000555557ddee55 in wm_event_do_handlers (C=0x7fffdc858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3071 - 15 0x0000555557dd36b4 in WM_main (C=0x7fffdc858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418 - 16 0x0000555557dcdd64 in main (argc=1, argv=0x7fffffffe0b8) at /home/zed/prog/blender/source/creator/creator.c:505 ```

This issue was referenced by 17c15798c3

This issue was referenced by 17c15798c35f33e4150beacb0f7b612bcef90c3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63101
No description provided.